# Vaazha

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: agent_core.cpp.59D3CFC1EA7841DB.idx  agent_errors.hpp.22A5F9A080C75750.idx  main.cpp.B5FC9DD458DE6345.idx  test_errors.cpp.D17A545541C80207.idx
docs/: architecture.md
src/app/: cli_parser.cpp  cli_parser.hpp  main.cpp
src/core/config/: run_id.hpp
src/core/errors/: agent_errors.hpp
src/core/logging/: logger.hpp
src/policy/: policy_guard.cpp  policy_guard.hpp
src/protocol/: event_contract.hpp  message_contract.hpp  run_execution_contract.hpp  run_request.hpp  tool_contract.hpp
src/runtime/: deterministic_executor.cpp  deterministic_executor.hpp
src/session/: artifact_writer.cpp  artifact_writer.hpp  run_manager.cpp  run_manager.hpp
src/tools/: tool_host.cpp  tool_host.hpp
tests/unit/: test_artifact_writer.cpp  test_cli_parser.cpp  test_deterministic_executor.cpp  test_errors.cpp  test_policy_guard.cpp  test_run_manager.cpp  test_tool_host.cpp
